Was added docker files configurations.

--- a/todolist-tasks/src/main/resources/application.properties
+++ b/todolist-tasks/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.application.name=todolist-ms-tasks
+server.port=8082
+spring.datasource.url=jdbc:postgresql://todolist_ms_db_tasks:5432/${DB_DATABASE:todolist_ms_tasks}
+spring.datasource.username=${DB_USERNAME:username}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
 
-server.port=8081
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
