--- a/todolist-users/src/main/resources/application.properties
+++ b/todolist-users/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=8082
+spring.application.name=todolist-ms-users
+server.port=${PORT:8081}
+spring.datasource.url=jdbc:mysql://todolist_ms_db_users:3306/${DB_DATABASE:todolist_ms_users}
+spring.datasource.username=${DB_USERNAME:username}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
